# Hopital-Pitie-Salpetriere

./: .gitignore  README.md  analysis.txt  lgbm_result.txt  main.py  pyproject.toml  training_log.txt
app/: EDA_Admission.py  EDA_logistique.py  EDA_patient_séjour.py  __init__.py  config.py  main.py  utils.py
app/views/: dashboard.py  landing.py
app/views/tabs/: eda.py  ml.py  overview.py  simulator.py  team.py
data/raw/: equipements_poles.csv  generation_data.ipynb  lits_poles.csv  patients_pitie_2024.csv  personnel_poles.csv  salles_isolement_pitie.csv  stocks_medicaments.csv  stocks_medicaments_2024.csv
data/raw/data/: equipements_medicaux.csv  equipements_poles_plus6.csv  lits_et_occupation.csv  lits_poles_plus6.csv  personnel_disponible.csv  personnel_poles_plus6.csv  stocks_medicaments.csv
models/: hybrid_admissions_v1.joblib  lightgbm_final_v2.joblib  xgboost_admissions_v1.joblib  xgboost_optimized_v1.joblib
notebooks/: EDA.ipynb  EDA_logistique.ipynb  EDA_patient_séjour.ipynb  LigthGBM.ipynb  Modelisation.ipynb  SAMIRAX.ipynb  XGBoost.ipynb
reports/: .gitkeep  Documentation_Technique.md  README.md  Rapport_Conception.md
scripts/: analyze_potential.py  champion_verify.py  check_mae_v4.py  clean_notebook_outputs.py  final_precision_log.py  final_push_mae.py  final_surge_aware.py  optimize_lgbm.py  optimize_v5.py  optimize_v6.py  restore_best_model.py  retrain_lgbm_2425.py  train_model.py  ultimate_ensemble.py  update_notebook_v3.py  update_notebook_v4.py  update_notebook_v6.py
src/: __init__.py  admissions.py  diag_patient_sejour.py  generation_data.ipynb  generation_data_logistique.ipynb  generation_salles_pitie.ipynb  stocks_medicaments_2024.py
src/hopital_pitie_salpetriere.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py
