[project]
name = "h-pital-piti-salp-tri-re"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fakedata>=0.4.3",
    "faker>=40.1.2",
    "numpy>=2.4.2",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "prophet>=1.3.0",
    "pytest>=9.0.2",
    "scikit-learn>=1.8.0",
    "statsmodels>=0.14.6",
    "streamlit>=1.53.1",
    "xgboost>=3.1.3",
]
