[project]
name = "hopital-pitie-salpetriere"
version = "0.1.0"
description = "Système de prévision et de gestion des ressources pour l'Hôpital Pitié-Salpêtrière"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "FranckF", email = "franck@example.com" },
    { name = "Koffi Gaëtan", email = "koffi@example.com" },
    { name = "Djouhratabet", email = "djouhratabet@example.com" },
    { name = "Christian Martineau", email = "christian@example.com" },
]
license = { text = "MIT" }
keywords = ["healthcare", "hospital", "prediction", "machine-learning", "data-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "faker>=40.1.2",
    "numpy>=2.4.2",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "pytest>=9.0.2",
    "scikit-learn>=1.8.0",
    "statsmodels>=0.14.6",
    "streamlit>=1.53.1",
    "xgboost>=3.1.3",
    "joblib>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
]
ml = [
    "prophet>=1.3.0",
    "lightgbm>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/FranckF/hopital-pitie-salpetriere"
Repository = "https://github.com/FranckF/hopital-pitie-salpetriere"
Documentation = "https://github.com/FranckF/hopital-pitie-salpetriere/blob/main/README.md"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ['py313']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
